--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -34,6 +34,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
     </section>
 
     <section class="fade-in">
+      <PDFResumeText />
+    </section>
+
+    <section class="fade-in">
       <div class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
@@ -50,6 +54,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
           </div>
           <div class="swiper-slide">
             <FullListCard title="Featured" />
+          </div>
+          <div class="swiper-slide">
+            <FullListCard title="Organizing" />
           </div>
           <div class="swiper-slide">
             <FullListCard title="Press" />
